# board-api

./: .gitignore  .pylintrc  README.md  docker-compose.yml  justfile  log_conf.prod.yaml  log_conf.yaml  pyproject.toml  script01.py
alembic/: env.py
alembic/versions/: 017dc16d1b8c_add_tasks01.py  50d99fae89b1_add_users.py  5a486dc8d90f_init.py  92b6bf6c4cd0_add_user_to_project.py  dc68c0939a88_add_users.py
app/: main.py
app/core/: db.py  middleware.py  settings.py
app/projects/: model.py  repository.py  routes.py  schema.py  service.py
app/tasks/: model.py  repository.py  routes.py  schema.py  service.py
app/users/: current_user.py  jwt.py  model.py  repository.py  routes.py  schema.py  security.py  service.py
